<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<!-- PERUN -->
	<groupId>cz.metacentrum.perun</groupId>
	<artifactId>wui</artifactId>
	<version>0.0.0-development</version>
	<packaging>pom</packaging>

	<!-- PERUN MODULES -->
	<modules>
		<module>perun-wui-core</module>
		<module>perun-wui-registrar</module>
		<module>perun-wui-consolidator</module>
		<module>perun-wui-pwdreset</module>
		<module>perun-wui-profile</module>
	</modules>

	<!-- common environmental and version properties-->
	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>

		<!-- USE UTF-8 in whole project -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Project wide GWT version -->
		<gwtVersion>2.9.0</gwtVersion>
		<gwtPluginVersion>2.9.0</gwtPluginVersion>
		<gwtp.version>1.6</gwtp.version>
		<gin.version>2.1.2</gin.version>
	</properties>

	<!-- DEFAULT MAVEN BUILD SETTINGS

	 - child modules inherits settings (e.g. version, encoding), not plugin usage itself
	 - to explicitly use one of listed plugins in module just specify groupId and artifactId in it's plugins section for each plugin
	 - child module can override any setting of plugin by defining value in child module (or it's profile)
	 - beware, that default action on plugins configurations, executions etc. is MERGE !!
	 - if merged values are defined in both (parent and child module), than module value if used

	-->
	<build>

		<!-- by default we build + install artifact in local repository -->
		<defaultGoal>install</defaultGoal>

		<!-- Common plugin settings is inherited by child modules -->
		<pluginManagement>

			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>gwt-maven-plugin</artifactId>
					<version>${gwtPluginVersion}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<sourceLevel>1.8</sourceLevel>
						<extraJvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED</extraJvmArgs>
					</configuration>
				</plugin>

				<!-- plugin used to apply jUnit tests settings in maven and to generate report (target/surefire-reports)-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.15</version>
					<configuration>
						<!-- disable logging for maven's tests / Test in you IDE will log normally -->
						<argLine>-Dlog4j.configuration=</argLine>
						<testFailureIgnore>false</testFailureIgnore>
						<skip>false</skip>
					</configuration>
				</plugin>
			</plugins>

		</pluginManagement>

	</build>

	<!-- DEFAULT MAVEN DEPENDENCY SETTINGS

	 - child modules inherits settings (e.g. version, scope), not dependency itself
	 - to explicitly use one of listed dependencies in module just specify groupId and artifactId in it's dependencies section
	 - child module can override any setting by defining value in child module (or it's profile)
	 - beware, that default action on dependency configuration is MERGE !!
	 - if merged values are defined in both (parent and child module), than module value if used

	-->
	<dependencyManagement>
		<dependencies>

			<!-- LOGGING -->

			<!-- OTHERS -->

			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt-user</artifactId>
				<version>${gwtVersion}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt-dev</artifactId>
				<version>${gwtVersion}</version>
				<scope>provided</scope>
			</dependency>

			<!-- GWT Bootstrap 3 -->

			<dependency>
				<groupId>org.gwtbootstrap3</groupId>
				<artifactId>gwtbootstrap3</artifactId>
				<version>1.0.1</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.gwtbootstrap3</groupId>
				<artifactId>gwtbootstrap3-extras</artifactId>
				<version>1.0.1</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>com.google.gwt.inject</groupId>
				<artifactId>gin</artifactId>
				<version>${gin.version}</version>
			</dependency>

			<dependency>
				<groupId>com.gwtplatform</groupId>
				<artifactId>gwtp-mvp-client</artifactId>
				<version>${gwtp.version}</version>
				<scope>provided</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>sonatype-nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>sonatype-nexus-snapshots2</id>
			<url>https://oss.sonatype.org/content/repositories/google-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<!-- Perun project info -->
	<name>perun-wui</name>
	<description>Web interface for Perun using GWT and Bootstrap3.</description>

	<organization>
		<name>CESNET, z.s.p.o.</name>
		<url>https://www.cesnet.cz/</url>
	</organization>

	<inceptionYear>2014</inceptionYear>

	<url>https://perun.cesnet.cz/web/</url>

	<scm>
		<connection>scm:git:https://github.com/zlamalp/perun-wui.git</connection>
		<url>scm:git:https://github.com/zlamalp/perun-wui.git</url>
		<developerConnection>scm:git:https://github.com/zlamalp/perun-wui.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

</project>
